--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@
 /test/tmp/
 /test/version_tmp/
 /tmp/
-Gemfile.lock
 
 # IntelliJ files
 .idea/
@@ -31,9 +30,11 @@ build/
 
 # for a library or gem, you might want to ignore these files since the code is
 # intended to run in multiple environments; otherwise, check them in:
-# Gemfile.lock
-# .ruby-version
-# .ruby-gemset
+
+Gemfile.lock
+.ruby-version
+.ruby-gemset
+pkg/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
