--- a/spec/fixtures/two_dbs.yml
+++ b/spec/fixtures/two_dbs.yml
@@ -1,6 +1,6 @@
 second:
   adapter: sqlite3
-  database: "tmp/db1.test"
+  database: tmp/second.test
   host_names:
     - second.localhost
     - 2nd.localhost
